--- a/campio/css/style.css
+++ b/campio/css/style.css
@@ -11,11 +11,10 @@
 
 	html {
 		background-color: #313a3d;
-		background-attachment: fixed,						fixed;
-		/*background-image: url("../images/header.jpg");*/
-		background-position: top left,					center center;
-		background-repeat: repeat,						none;
-		background-size: auto,						cover;
+		background-attachment: fixed;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
 
 	html.is-loading body *, html.is-loading body *:before, html.is-loading body *:after {
@@ -1242,4 +1241,16 @@
 /* Custom styling */
 .footer {
   background-color: transparent !important;
+}
+
+.background-image {
+	z-index: 1;
+}
+
+.background-image img {
+		display: none;
+}
+
+.wraps-everything {
+	z-index: 2;
 }
